[package]
name = "udp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
prost-types = "0.12.1"
bytes = "1"
chrono = "0.4.31"

[dependencies.tokio]
version = "1.32.0"
features = ["full"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
prost-build = "0.12.1"
